# fivem-wasm

./: .gitignore  Cargo.toml  desc.md  readme.md
bindings/: Cargo.toml  readme.md
bindings/client/: Cargo.toml
bindings/client/src/: events.rs  lib.rs  task.rs
bindings/core/: Cargo.toml  readme.md
bindings/core/src/: events.rs  exports.rs  invoker.rs  lib.rs  ref_funcs.rs  runtime.rs  types.rs  wasm_impl.rs
bindings/core/src/wasm_impl/: events.rs  invoker.rs  ref_funcs.rs  runtime.rs
bindings/server/: Cargo.toml
bindings/server/src/: lib.rs
bindings/shared/: Cargo.toml
bindings/shared/src/: lib.rs
bindings/src/: events.rs  exports.rs  invoker.rs  lib.rs  ref_funcs.rs  runtime.rs  server.rs  types.rs
examples/basic/: Cargo.toml
examples/basic-client/: Cargo.toml
examples/basic-client/src/: lib.rs
examples/basic-server/: Cargo.toml
examples/basic-server/src/: lib.rs
examples/basic/src/: lib.rs
examples/bench/: Cargo.toml
examples/bench/src/: bench.js  long.str  main.rs
examples/entry/: Cargo.toml
examples/entry/src/: invoke.rs  lib.rs
glue/src/: lib.rs
natives-gen/: Cargo.toml
natives-gen/src/: main.rs  natives.rs  parser.rs  rpcs.rs  types.rs
runtime/: Cargo.toml
runtime/src/: invoker.rs  lib.rs  walloc.rs
standalone/: Cargo.toml
standalone/src/: main.rs
utils/: fivem-build.ps1
