[workspace]
members = [
    "runtime",
    "glue",
    "natives-gen",

    "bindings",
    "bindings/core",
    "bindings/client",
    "bindings/server",

    # test
    "standalone",

    # examples
    "examples/basic-client",
    "examples/basic-server",
    "examples/bench",
]

[profile.release]
lto = true
