[package]
name = "cfx"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Tools to write WASM scripts for CitizenFX"
license = "MIT"
edition = "2018"

[features]
default = []
server = ["cfx-server"]
client = ["cfx-client"]

[dependencies]
cfx-core = { path = "core/" }
cfx-client = { path = "client/", optional = true }
cfx-server = { path = "server/", optional = true }
