[package]
name = "cfx"
version = "0.1.1"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Tools to write WASM scripts for CitizenFX"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
server = ["cfx-server"]
client = ["cfx-client"]

[dependencies]
cfx-core = { path = "core/" }
cfx-client = { path = "client/", optional = true }
cfx-server = { path = "server/", optional = true }
