[package]
name = "cfx"
version = "0.2.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Tools to write WASM scripts for CitizenFX"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
server = ["cfx-server"]
client = ["cfx-client"]

[dependencies]
cfx-core = { path = "core/", version = "0.2.0" }
cfx-client = { path = "client/", version = "0.2.0", optional = true }
cfx-server = { path = "server/", version = "0.2.0", optional = true }
