[package]
name = "fivem-client"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fivem-core = { path = "../core" }
rmp-serde = "0.15.4"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
