[package]
name = "cfx-client"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Tools to write client WASM scripts for CitizenFX"
license = "MIT"
edition = "2018"
include = ["**/*.rs"]

[dependencies]
cfx-core = { path = "../core", version = "0.1.0" }
rmp-serde = "0.15.4"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
