[package]
name = "cfx-core"
version = "0.2.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Core engine of WASM scripts to communicate with CitizenFX WASM Runtime"
license = "MIT"
edition = "2018"

[dependencies]
rmp-serde = "0.15.4"
futures = { version = "0.3.14", features = ["executor"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
rustc-hash = "1.1.0"
async-stream = "0.3.1"
cfx-wasm-rt-types = "0.1.0"
