[package]
name = "cfx-server"
version = "0.2.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Tools to write WASM scripts for CitizenFX"
license = "MIT"
edition = "2018"
include = ["**/*.rs"]

[dependencies]
cfx-core = { path = "../core", version = "0.2.0" }
rmp-serde = "0.15.4"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
